--- a/view/index.erb
+++ b/view/index.erb
@@ -1,4 +1,4 @@
 <form method="POST" action="/name">
     <input type="text" name ="name"/>
-    <input type="Submit" name ="name"/>
+    <input type="submit" value ="Submit"/>
 </form>
